fix: :lipstick: few styling follow up fixes to remove text-align as part of app parent container styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,4 @@
 .App-container {
-  text-align: center;
   background-color: #FFFEFF;
   box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.15);
   margin: 1.5em;
